<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>11</source>
					<target>11</target>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<parent>
		<groupId>org.vcell</groupId>
		<artifactId>vcell-pom</artifactId>
		<version>0.0.1-SNAPSHOT</version>
	</parent>

	<artifactId>vcell-client</artifactId>

	<name>vcell-client</name>
	<!-- COMMON PROJECT DEFINITIONS AND PROPERTIES -->
	<description>The Virtual Cell client and server</description>
	<url>http://maven.apache.org</url>
	<inceptionYear>1997</inceptionYear>
	<organization>
		<name>VCell</name>
		<url>http://vcell.org</url>
	</organization>
	<licenses>
		<license>
			<name>MIT</name>
			<url>https://opensource.org/licenses/MIT</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>jcschaff</id>
			<name>Jim Schaff</name>
			<roles>
				<role>founder</role>
				<role>lead</role>
				<role>developer</role>
				<role>debugger</role>
				<role>reviewer</role>
				<role>support</role>
				<role>maintainer</role>
			</roles>
		</developer>
	</developers>
	<contributors>
		<contributor>
			<name>John Wagner</name>
		</contributor>
	</contributors>

	<mailingLists>
		<mailingList>
			<name>VCell Open Discussion Forum</name>
			<subscribe>https://groups.google.com/group/vcell-discuss</subscribe>
			<unsubscribe>https://groups.google.com/group/vcell-discuss</unsubscribe>
			<post>vcell-discuss@googlegroups.com</post>
			<archive>https://groups.google.com/group/vcell-discuss</archive>
		</mailingList>
	</mailingLists>

	<scm>
		<connection>scm:git:git://github.com/virtualcell/vcell</connection>
		<developerConnection>scm:git:git@github.com:virtualcell/vcell</developerConnection>
		<tag>HEAD</tag>
		<url>https://github.com/virtualcell/vcell</url>
	</scm>
	<issueManagement>
		<system>Bugzilla</system>
		<url>http://code3.cam.uchc.edu/bugzilla/</url>
	</issueManagement>
	<ciManagement>
		<system>None</system>
	</ciManagement>

	<properties>
		<license.licenseName>MIT</license.licenseName>
		<license.copyrightOwners>UConn Health</license.copyrightOwners>
	</properties>

	<repositories>
		<repository>
			<id>ej-technologies</id>
			<url>https://maven.ej-technologies.com/repository</url>
		</repository>
	</repositories>

	<dependencies>

		<dependency>
			<groupId>com.install4j</groupId>
			<artifactId>install4j-runtime</artifactId>
			<version>8.0.5</version>
		</dependency>


		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
		</dependency>


		<dependency>
			<groupId>org.vcell</groupId>
			<artifactId>vcell-core</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>org.vcell</groupId>
			<artifactId>vcell-math</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>org.vcell</groupId>
			<artifactId>vcell-util</artifactId>
			<version>${project.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/javax.media/jmf -->
		<dependency>
			<groupId>javax.media</groupId>
			<artifactId>jmf</artifactId>
			<version>2.1.1e</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/javax.help/javahelp -->

		<dependency>
			<groupId>javax.help</groupId>
			<artifactId>javahelp</artifactId>
			<version>2.0.05</version>
		</dependency>

		<dependency>
			<groupId>org.eclipse.jetty</groupId>
			<artifactId>jetty-server</artifactId>
			<!--  <version>${jettyVersion}</version> -->
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.json/json -->
		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20220924</version>
		</dependency>

	</dependencies>
	<profiles>
		<profile>
			<id>build-documentation</id>
			<activation>
				<activeByDefault>false</activeByDefault>
				<file>
					<missing>target/classes/vcellDoc</missing>
				</file>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>exec-maven-plugin</artifactId>
						<executions>
							<execution>
								<id>build-user-help</id>
								<phase>process-classes</phase>
								<goals>
									<goal>java</goal>
								</goals>
								<configuration>
									<mainClass>org.vcell.documentation.DocumentCompiler</mainClass>
									<arguments>
										<argument>${project.basedir}/UserDocumentation/originalXML</argument>
										<argument>${project.basedir}/target/classes/vcellDoc</argument>
									</arguments>
								</configuration>
							</execution>

						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>
